// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svgo > async > #loadConfig [async] > should load config using filePath 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo > async > #loadConfig [async] > should not load config with "runtimeConfig: false 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo > async > #loadConfig [async] > should use default config without state.filePath 1`] = `
{
  "descProp": false,
  "dimensions": false,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo > async > #loadConfig [async] > should work with custom config path 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "ref": false,
  "replaceAttrValues": [
    [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo > sync > #loadConfig [sync] > should load config using filePath 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo > sync > #loadConfig [sync] > should not load config with "runtimeConfig: false 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo > sync > #loadConfig [sync] > should use default config without state.filePath 1`] = `
{
  "descProp": false,
  "dimensions": false,
  "expandProps": "end",
  "exportType": "default",
  "icon": false,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "ref": false,
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;

exports[`svgo > sync > #loadConfig [sync] > should work with custom config path 1`] = `
{
  "descProp": false,
  "dimensions": true,
  "expandProps": "end",
  "exportType": "default",
  "icon": true,
  "index": false,
  "memo": false,
  "namedExport": "ReactComponent",
  "native": false,
  "noSemi": true,
  "ref": false,
  "replaceAttrValues": [
    [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "titleProp": false,
  "typescript": false,
}
`;
